--- a/src/components/Tabs.module.css
+++ b/src/components/Tabs.module.css
@@ -22,6 +22,17 @@
   font-weight: 500;
   font-size: 15pt;
 }
+.inactiveTabs:hover {
+  padding: 15px 10px;
+  margin: 10px 0px -0px 0px;
+  width: 10vw;
+  cursor: pointer;
+  background-color: rgb(154, 206, 206);
+  color: teal;
+  border-top-left-radius: 20px;
+  font-weight: 500;
+  font-size: 15pt;
+}
 .activeTab {
   background-color: rgb(186, 233, 233);
   padding: 15px 10px;
